[tool.poetry]
name = "my-package"
version = "0.1.0"
description = "My package description"
authors = ["gowridurgad <gowridurga.d@github.com>"]

[tool.poetry.dependencies]
numpy = "^1.22.3"
boto3 = "^1.24.59"
pydantic = {version = "<2.0", extras = ["dotenv"]}
jinja2 = "^3.1.2"
openai = {version = "0.28", optional = true}

[tool.poetry.extras]
openai = ["openai"]
